[gd_scene load_steps=6 format=3 uid="uid://bbpweuqjgd5wd"]

[ext_resource type="Texture2D" uid="uid://dktmgaedec3ug" path="res://Recursos/Pistola_Oxidada.png" id="1_5fe6q"]
[ext_resource type="Script" path="res://Codigos/Arma_Fuego.gd" id="1_fuwq8"]
[ext_resource type="AudioStream" uid="uid://bs0p6ummj7d44" path="res://Sonido/opl3elecsnare1-103595.mp3" id="2_oxooq"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_wa2dv"]
polygon = PackedVector2Array(10, 1, 21, 1, 21, 0, 22, 0, 22, -2, 21, -2, 21, -3, 17, -3, 17, -4, 16, -4, 16, -5, 14, -5, 14, -6, 13, -6, 13, -7, 10, -7, 10, -8, 9, -8, 9, -9, 7, -9, 7, -8, 6, -8, 6, -4, 7, -4, 7, -3, 8, -3, 8, -1, 7, -1, 7, 0, 8, 0, 8, 1, 9, 1, 9, 0, 10, 0)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_ws7rx"]
polygon = PackedVector2Array(7, 1, 8, 1, 8, -1, 7, -1, 7, -2, 8, -2, 8, -3, 9, -3, 9, -2, 10, -2, 10, -3, 21, -3, 21, -2, 22, -2, 22, 0, 21, 0, 21, 0, 21, 1, 17, 1, 17, 2, 16, 2, 16, 3, 14, 3, 14, 4, 13, 4, 13, 5, 10, 5, 10, 6, 9, 6, 9, 7, 7, 7, 7, 6, 6, 6, 6, 2, 7, 2)

[node name="Arma_Fuego" type="Node2D"]
script = ExtResource("1_fuwq8")

[node name="OccluderArriba" type="LightOccluder2D" parent="."]
visible = false
occluder = SubResource("OccluderPolygon2D_wa2dv")

[node name="OccluderAbajo" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_ws7rx")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(14, -1)
texture = ExtResource("1_5fe6q")

[node name="MarcaDeDisparo" type="Marker2D" parent="Sprite2D"]
position = Vector2(7, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_oxooq")
volume_db = -5.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
